@@ -1,5 +1,5 @@
 /*
- * $Id: tables.h,v 1.50 2005/07/29 07:54:35 mikulik Exp $
+ * $Id: tables.h,v 1.51 2005/08/06 19:07:19 sfeam Exp $
  */
 
 /* GNUPLOT - tables.h */
@@ -127,7 +127,7 @@ enum set_key_id {
     S_KEY_INVALID,
     S_KEY_TOP, S_KEY_BOTTOM, S_KEY_LEFT, S_KEY_RIGHT, S_KEY_CENTER,
     S_KEY_VERTICAL, S_KEY_HORIZONTAL, S_KEY_OVER, S_KEY_UNDER, S_KEY_MANUAL,
-    S_KEY_INSIDE, S_KEY_OUTSIDE,
+    S_KEY_INSIDE, S_KEY_OUTSIDE, S_KEY_ABOVE, S_KEY_BELOW,
     S_KEY_TMARGIN, S_KEY_BMARGIN, S_KEY_LMARGIN, S_KEY_RMARGIN,
     S_KEY_LLEFT, S_KEY_RRIGHT, S_KEY_REVERSE, S_KEY_NOREVERSE,
     S_KEY_INVERT, S_KEY_NOINVERT,
